--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "postcss-preset-mantine": "^1.15.0",
     "postcss-simple-vars": "^7.0.1",
     "typescript": "^5.2.2",
-    "vite": "^5.2.0"
+    "vite": "^5.2.0",
+    "vite-plugin-compression2": "^1.1.1"
   }
 }
